# backend-dressing-manager

./: README.md  build_docker_image.sh  deploy_infrastructure.sh  pyproject.toml  run_dev_server.sh
Python-3.10.0/: Makefile  Makefile.pre  config.status  python-config  python-config.py
Python-3.10.0/Misc/: python-config.sh  python-embed.pc  python.pc
Python-3.10.0/Modules/: ld_so_aix
deployment/docker/: Dockerfile
deployment/docker-compose/: docker-compose.yml
dressings_manager_service/aggregate1/application/: aggregate1_creator.py
dressings_manager_service/aggregate1/domain/: aggregate1_repository.py
dressings_manager_service/aggregate1/infrastructure/: aggregate1_to_item_converter.py  aggregate1_to_mongo_object_converter.py  item_to_aggregate1_converter.py  mongo_aggregate1_repository.py  mongo_object_to_aggregate1_converter.py
dressings_manager_service/collagenase/application/: collagenase_creator.py  collagenase_reader.py  collagenase_remover.py  collagenase_updater.py
dressings_manager_service/collagenase/domain/: collagenase.py  collagenase_repository.py
dressings_manager_service/collagenase/infrastructure/: item_to_collagenase_converter.py  mysql_collagenase_repository.py
dressings_manager_service/collection/application/: collection_creator.py  collection_reader.py  collection_remover.py  collection_updater.py
dressings_manager_service/collection/domain/: collection.py  collection_repository.py
dressings_manager_service/entrypoint/: app.py
git-hooks/: pre-commit  pre-push
tests/: conftest.py
(+64 files in other folders)
