[tool.poetry]
name = "dressings_manager_service"
version = "0.1.0"
description = "This repository contains the implementation of the ... module of the ... project. This module ... to ... based on ..."
authors = ['Carlota <ccanamero@gradiant.org>', 'Andrés <amunoz@gradiant.org>']

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = {extras = ["all"], version = "^0.73.0"}
pydantic = "^1.9.0"
pymongo = "^4.0.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-dotenv = "^0.5.2"
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
